@@ -432,6 +432,8 @@ Release 2.1.0-beta - 2013-08-06
 
     HADOOP-9816. RPC Sasl QOP is broken (daryn)
 
+    HADOOP-9850. RPC kerberos errors don't trigger relogin. (daryn via kihwal)
+
   BREAKDOWN OF HADOOP-8562 SUBTASKS AND RELATED JIRAS
 
     HADOOP-8924. Hadoop Common creating package-info.java must not depend on
